--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,12 @@ cffi==2.0.0
 cssselect2==0.8.0
 Django==5.2.7
 djangorestframework==3.16.1
+djangorestframework_simplejwt==5.5.1
 fonttools==4.60.1
 pillow==11.3.0
 pycparser==2.23
 pydyf==0.11.0
+PyJWT==2.10.1
 pyphen==0.17.2
 sqlparse==0.5.3
 tinycss2==1.4.0
